# SLM

./: .gitignore  company_data.db  pyproject.toml  req.txt  temp_spreadsheet.db
app/: main.py
app/engine/: rag.py  sql_engine.py  tabular_engine.py
backend/: .gitignore  README.md  create_db.py  pyproject.toml
backend/app/: main.py
backend/app/engine/: model.py  rag.py  sql_engine.py  tabular_engine.py
backend/data/: story1.txt  users.json
backend/data/uploads/: story2.txt
data/: story3.txt
data/uploads/: weighted_trading_signals.xlsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: chat-interface.tsx  data-sidebar.tsx  login.tsx
